--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restraunt</title>
     <link rel="stylesheet" href="style.css">
-    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
 </head>
 
 <body>
+    <div>hello</div>
     <div class="header">
         <img src="images/logo.png" alt="logo">
     </div>
@@ -83,7 +85,8 @@
     </div>
     <div class="footer">
         <div id="section1"><img src="images/logo.png" alt=""></div>
-        <div id="section2"><div class="bada1"><strong>Main Link</strong></div>
+        <div id="section2">
+            <div class="bada1"><strong>Main Link</strong></div>
             <br>
             <br>
             <br>
@@ -94,35 +97,35 @@
         </div>
         <div id="section3">
             <p>
-                <div class="bada2"> <strong>Support</strong> <br></div>
-                <br>
-                About Us <br>
-                Privacy Policy <br>
-                Terms & Conditions
+            <div class="bada2"> <strong>Support</strong> <br></div>
+            <br>
+            About Us <br>
+            Privacy Policy <br>
+            Terms & Conditions
             </p>
         </div>
         <div id="section4">
             <p>
-                <div class="bada3"> <strong>Join Our Newsletter</strong> </div> <br>
-                <input type="email" id="email" name="email" placeholder="Enter Your Email Address">
-                <br><br>
-                <strong id="okkk">Follow Us</strong>
-                <br>
-                
-<div class="icon_container">
-    <div class="icon">
-        <i class="fab fa-facebook"></i>
-    </div>
-    <div class="icon">
-        <i class="fab fa-twitter" aria-hidden="true"></i>
-    </div>
-    <div class="icon">
-        <i class="fab fa-instagram" aria-hidden="true"></i>
-    </div>
-    <div class="icon">
-        <i class="fab fa-youtube" aria-hidden="true"></i>
-    </div>
-</div>
+            <div class="bada3"> <strong>Join Our Newsletter</strong> </div> <br>
+            <input type="email" id="email" name="email" placeholder="Enter Your Email Address">
+            <br><br>
+            <strong id="okkk">Follow Us</strong>
+            <br>
+
+            <div class="icon_container">
+                <div class="icon">
+                    <i class="fab fa-facebook"></i>
+                </div>
+                <div class="icon">
+                    <i class="fab fa-twitter" aria-hidden="true"></i>
+                </div>
+                <div class="icon">
+                    <i class="fab fa-instagram" aria-hidden="true"></i>
+                </div>
+                <div class="icon">
+                    <i class="fab fa-youtube" aria-hidden="true"></i>
+                </div>
+            </div>
 
 
             </p>
